# internal/modules/employee/dto.go
@@ -1,43 +1,43 @@
 package employee
 
 type CreateEmployeeRequest struct {
-	EmployeeID string `json:"employeeId" binding:"required"`
+	DepartmentID string `json:"department_id" binding:"required" example:"3f393bbd-9790-4045-853e-26a2c732ee06"`
 
-	FirstName string `json:"firstName" binding:"required,max=100"`
+	FirstName string `json:"firstName" binding:"required,max=100" example:"Shahadath Hossain"`
 
-	LastName string `json:"lastName"`
+	LastName string `json:"lastName" example:"Tamim"`
 
-	Email string `json:"email" binding:"required,email"`
+	Email string `json:"email" binding:"required,email" example:"shahadat@gmail.com"`
 
-	Phone string `json:"phone"`
+	Phone string `json:"phone" example:"123456"`
 
-	Designation string `json:"designation"`
+	Designation string `json:"designation" example:"assistant manager"`
 
-	JoiningDate int64 `json:"joiningDate"`
+	JoiningDate string `json:"joiningDate" example:"2006-01-02"`
 
-	Salary float64 `json:"salary"`
+	Salary float64 `json:"salary" example:"50000"`
 
-	Status bool `json:"status"`
+	Status string `json:"status" example:"active"`
 }
 
 type UpdateEmployeeRequest struct {
-	EmployeeID string `json:"employeeId"`
+	DepartmentID string `json:"department_id" example:"3f393bbd-9790-4045-853e-26a2c732ee06"`
 
-	FirstName string `json:"firstName"`
+	FirstName string `json:"firstName" example:"Shahadath Hossain"`
 
-	LastName string `json:"lastName"`
+	LastName string `json:"lastName" example:"Tamim"`
 
-	Email string `json:"email"`
+	Email string `json:"email" example:"shahadat@gmail.com"`
 
-	Phone string `json:"phone"`
+	Phone string `json:"phone" example:"123456"`
 
-	Designation string `json:"designation"`
+	Designation string `json:"designation" example:"assistant manager"`
 
-	JoiningDate int64 `json:"joiningDate"`
+	JoiningDate string `json:"joiningDate" example:"2006-01-02"`
 
-	Salary float64 `json:"salary"`
+	Salary float64 `json:"salary" example:"50000"`
 
-	Status bool `json:"status"`
+	Status string `json:"status" example:"active"`
 }
 
 type EmployeeResponse struct {
@@ -57,11 +57,11 @@ type EmployeeResponse struct {
 
 	Designation string `json:"designation"`
 
-	JoiningDate int64 `json:"joiningDate"`
+	JoiningDate string `json:"joiningDate"`
 
 	Salary float64 `json:"salary"`
 
-	Status bool `json:"status"`
+	Status string `json:"status"`
 
 	CreatedAt int64 `json:"createdAt"`
 }
